libs/extractor/src/snapshots/extractor__tests__vanilla_extract_font_face_with_style.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"font-usage.css.ts\",\nr#\"import { fontFace, style } from '@devup-ui/react'\nexport const myFont = fontFace({\n  src: 'local(\"Comic Sans MS\")',\n  fontWeight: 400\n})\nexport const text = style({\n  fontFamily: myFont\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "\"font-0-0\"",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "font-usage.css.ts",
                properties: {
                    "font-family": "font-0-0",
                    "font-weight": "400",
                    "src": "local(\"Comic Sans MS\")",
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const text = \"f0_0 a\";\n;\nexport const myFont = \"\\\"font-0-0\\\"\";\n",
}
