libs/extractor/src/snapshots/extractor__tests__vanilla_extract_global_theme.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"global-theme.css.ts\",\nr#\"import { createGlobalTheme } from '@devup-ui/react'\nexport const vars = createGlobalTheme(':root', {\n  color: {\n    brand: 'blue',\n    text: 'black',\n    background: 'white'\n  },\n  font: {\n    body: 'system-ui, sans-serif'\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-background-0-2",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-brand-0-0",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-text-0-1",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--font-body-0-3",
                value: "system-ui,sans-serif",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\nexport const vars = {\n\t\"color\": {\n\t\t\"brand\": \"var(--color-brand-0-0)\",\n\t\t\"text\": \"var(--color-text-0-1)\",\n\t\t\"background\": \"var(--color-background-0-2)\"\n\t},\n\t\"font\": { \"body\": \"var(--font-body-0-3)\" }\n};\n",
}
